First commited as before_65245_rev2