@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -23,14 +23,14 @@ import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.Reader;
 import java.io.Writer;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
@@ -192,13 +192,13 @@ public class DialogSettings implements IDialogSettings {
 	public int getInt(String key) throws NumberFormatException {
         String setting = items.get(key);
         if (setting == null) {
-            //new Integer(null) will throw a NumberFormatException and meet our spec, but this message
-            //is clearer.
+			// Integer.valueOf(null) will throw a NumberFormatException and
+			// meet our spec, but this message is clearer.
             throw new NumberFormatException(
                     "There is no setting associated with the key \"" + key + "\"");//$NON-NLS-1$ //$NON-NLS-2$
         }
 
-        return new Integer(setting).intValue();
+		return Integer.valueOf(setting).intValue();
     }
 
     @Override
@@ -282,7 +282,7 @@ public class DialogSettings implements IDialogSettings {
 	public void load(String fileName) throws IOException {
         FileInputStream stream = new FileInputStream(fileName);
         BufferedReader reader = new BufferedReader(new InputStreamReader(
-                stream, "utf-8"));//$NON-NLS-1$
+				stream, StandardCharsets.UTF_8));
         load(reader);
         reader.close();
     }
@@ -365,17 +365,17 @@ public class DialogSettings implements IDialogSettings {
 
 	@Override
 	public void save(Writer writer) throws IOException {
-    	final XMLWriter xmlWriter = new XMLWriter(writer);
+		@SuppressWarnings("resource")
+		final XMLWriter xmlWriter = new XMLWriter(writer);
     	save(xmlWriter);
     	xmlWriter.flush();
     }
 
     @Override
 	public void save(String fileName) throws IOException {
-        FileOutputStream stream = new FileOutputStream(fileName);
-        XMLWriter writer = new XMLWriter(stream);
-        save(writer);
-        writer.close();
+		try (XMLWriter writer = new XMLWriter(new FileOutputStream(fileName))) {
+			save(writer);
+		}
     }
 
     private void save(XMLWriter out) throws IOException {
@@ -384,20 +384,20 @@ public class DialogSettings implements IDialogSettings {
         out.startTag(TAG_SECTION, attributes);
         attributes.clear();
 
-        for (Iterator<String> i = items.keySet().iterator(); i.hasNext();) {
-            String key = i.next();
+		for (Entry<String, String> entry : items.entrySet()) {
+			String key = entry.getKey();
             attributes.put(TAG_KEY, key == null ? "" : key); //$NON-NLS-1$
-            String string = items.get(key);
+			String string = entry.getValue();
             attributes.put(TAG_VALUE, string == null ? "" : string); //$NON-NLS-1$
             out.printTag(TAG_ITEM, attributes, true);
         }
 
         attributes.clear();
-        for (Iterator<String> i = arrayItems.keySet().iterator(); i.hasNext();) {
-            String key = i.next();
+		for (Entry<String, String[]> entry : arrayItems.entrySet()) {
+			String key = entry.getKey();
             attributes.put(TAG_KEY, key == null ? "" : key); //$NON-NLS-1$
             out.startTag(TAG_LIST, attributes);
-            String[] value = arrayItems.get(key);
+			String[] value = entry.getValue();
             attributes.clear();
             if (value != null) {
                 for (int index = 0; index < value.length; index++) {
@@ -433,7 +433,7 @@ public class DialogSettings implements IDialogSettings {
     	 * @throws IOException
     	 */
     	public XMLWriter(OutputStream output) throws IOException {
-    		this(new OutputStreamWriter(output, "UTF8")); //$NON-NLS-1$
+			this(new OutputStreamWriter(output, StandardCharsets.UTF_8));
     	}
 
     	/**
@@ -484,12 +484,12 @@ public class DialogSettings implements IDialogSettings {
     		sb.append('<');
     		sb.append(name);
     		if (parameters != null) {
-				for (Enumeration<String> e = Collections.enumeration(parameters.keySet()); e.hasMoreElements();) {
+				for (Entry<String, String> entry : parameters.entrySet()) {
     				sb.append(" "); //$NON-NLS-1$
-    				String key = e.nextElement();
+					String key = entry.getKey();
     				sb.append(key);
     				sb.append("=\""); //$NON-NLS-1$
-    				sb.append(getEscaped(String.valueOf(parameters.get(key))));
+					sb.append(getEscaped(String.valueOf(entry.getValue())));
     				sb.append("\""); //$NON-NLS-1$
     			}
 			}
